[tool.poetry]
name = "sardine-system"
version = "0.2.1"
description = "Python's missing algorave module"
authors = [
	"Raphaël Forment <raphael.forment@gmail.com>",
	"thegamecracks"
]
license = "GPL-3.0-only"
readme = "README.md"

keywords = ["algorave", "live-coding", "music", "patterns"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Artistic Software",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
]

packages = [
	{ include = "fishery" },
	{ include = "sardine" },
	{ include = "tests", format = "sdist" }
]

[tool.poetry.dependencies]
python = ">=3.10"
Click = ">=8.1.3"
LinkPython-extern = { version = ">=1.0.2", python = "<3.12"}
python-rtmidi = ">=1.4.9"
inquirerpy = { version = ">=0.3.4", python = "<4.0" }
easing-functions = ">=1.0.4"
mido = ">=1.2"
osc4py3 = ">=1.0.8"
uvloop = { version = ">=0.16", markers = "sys_platform != 'win32'"}
appdirs = ">=1.4"
psutil = ">=5.9"
rich = ">=12.5"
lark = ">=1.1"
exceptiongroup = ">=1.0.4"

[tool.poetry.group.dev.dependencies]
black = ">=22.8"
pylint = ">=2.15"
pytest = ">=7.2.0"
pytest-asyncio = ">=0.20.2"

[tool.poetry.group.profile.dependencies]
yappi = ">=1.4.0"

[[tool.poetry.source]]
name = "thegamecracks"
url = "https://thegamecracks.github.io/python-rtmidi-wheels/index.html"
default = false
secondary = false

[tool.poetry.urls]
Homepage = "https://sardine.raphaelforment.fr"
Documentation = "https://sardine.raphaelforment.fr"
"Source Code" = "https://github.com/Bubobubobubobubo/sardine"
"Bug Tracker" = "https://github.com/Bubobubobubobubo/sardine/issues"

[tool.poetry.scripts]
fishery = 'fishery.__main__:main'
sardine-config-python = 'sardine.cli.main:edit_python_configuration'
sardine-config-superdirt = 'sardine.cli.main:edit_superdirt_configuration'
sardine-config = 'sardine.cli.main:main'

[tool.black]
target_version = ['py311']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
profile = "black"
skip_gitignore = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
